...
    @IBOutlet private weak var errorLabel: UILabel!
    @IBOutlet private weak var authenticateButton: RoundedButton!
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        view.accessibilityIdentifier = "Login"

        viewModel.delegate = self
        configureViews()
        
        #if DEBUG
        addDebugGesture()
...
        textField.configure(with: type)
    }
    
    private func configure(_ button: UIButton) {
        // TODO: Localization
        button.setTitle("Login", for: .normal)
        button.accessibilityIdentifier = "loginButton"
    }
}

extension LoginViewController: UITextFieldDelegate {
    func textFieldShouldReturn(_ textField: UITextField) -> Bool {
        switch textField.tag {
...
