...
        self.delegate = delegate
    }

    override func start() {
        viewModel.coordinator = self
        let view = AccountsView(viewModel: viewModel)
            .accessibility(identifier: "Accounts")
        let hostingController = UIHostingController(rootView: view)
        hostingController.modalPresentationStyle = .fullScreen
        hostingController.setBackground()
        rootViewController.present(hostingController, animated: true) {
            self.rootViewController.viewControllers = []
        }
...
